# bmi_dummy

./: .gitignore  LICENSE.md  README.md  pyproject.toml
bmi_dummy/: __init__.py  bmi_dummy.py
